Adding ReportConfig, JenkinsFile, pom update.

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
                 <version>3.1.2</version>
                 <configuration>
                     <groups>
+                        Booking_Regression
                     </groups>
                 </configuration>
             </plugin>
